* [Bug 983] add interface [listen | ignore | drop] ... directive.
* [Bug 1243] MD5auth_setkey zero-fills key from first zero octet.
* [Bug 1295] leftover fix, do not crash on exit in free_config_trap()
  when "trap 1.2.3.4" is used without any further options.
* [Bug 1311] 4.2.5p211 doesn't build in no-debug mode.
* document interface (alias nic) and unpeer.
* Correct syntax error line & column numbers.
* CID 79: kod_init_kod_db() fails to fclose(db_s) in two error paths.
* CID 80: attempt to quiet Coverity false positive re: leaking "reason"
  in main().
* Documentation updates from Dave Mills.
* CID 81: savedconfig leaked in save_config().
* Make the code agree with the spec and the book (Dave Mills).
(4.2.5p211) 2009/09/14 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 663] respect ntpq -c and -p order on command line.
* [Bug 1292] more VC6 unsigned __int64 workarounds.
* [Bug 1296] Added Support for Trimble Acutime Gold.
(4.2.5p210) 2009/09/06 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1294] Use OPENSSL_INC and OPENSSL_LIB macros for Windows
  and remove unnecessary reference to applink.c for Windows
* [Bug 1295] trap directive options are not optional.
* [Bug 1297] yylex() must always set yylval before returning.
(4.2.5p209) 2009/09/01 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1290] Fix to use GETTIMEOFDAY macro
* [Bug 1289] Update project files for VC6, VS2003, VS2005, VS 2008
(4.2.5p208) 2009/08/30 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1293] make configuration dumper ready for release, specifically:
* rename ntpq dumpcfg command to "saveconfig".
* require authentication for saveconfig.
* "restrict ... nomodify" prevents saveconfig and :config.
* "saveconfig ." shorthand to save to startup configuration file.
* support strftime() substitution in saveconfig arg to timestamp
  the output filename, for example "saveconfig %Y%m%d-%H%M%S.conf".
* display saveconfig response message from ntpd in ntpq.