@@ -1,3 +1,4 @@
+* [Bug 1310] fix Thunderbolt mode in refclock_palisade.c
 * [Bug 983] add interface [listen | ignore | drop] ... directive.
 * [Bug 1243] MD5auth_setkey zero-fills key from first zero octet.
 * [Bug 1295] leftover fix, do not crash on exit in free_config_trap()
